# audioplayer

./: CMakeLists.txt  main.cpp
include/: AudioPlayer.h  MainWindow.h
src/: Counter.h  MainWindow.cpp  MainWindow.h
src/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.h
src/Counter/: Counter.cpp
src/MainWindow/: MainWindow.ui
src/forms/: MainWindow.cpp  MainWindow.ui
